syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "./;proto";
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

enum Gender{
  MALE = 0;
  FEMALE = 1;
}

message HelloRequest {
  string name = 1;
  string age = 2;
  Gender g = 3;
  map<string, string> mp = 4;
  google.protobuf.Timestamp addTime = 5;
}

message HelloReply {
  string message = 1;
}